Fix css on mobile

--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,10 +1,5 @@
-body { 
-  height: 100%;
-}
-
 .App {
   text-align: center;
-  overflow: hidden;
 }
 
 .App-header {
